--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Node.js + MongoDB: JWT Authentication & Authorization",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "node.js",
@@ -26,5 +28,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.11.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
