--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "mongodb",
     "mongoose"
   ],
-  "author": "bezkoder",
+  "author": "nirvana",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -27,7 +27,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.11.2"
+    "mongoose": "^6.11.2",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
